<resources>
    <string name="app_name">BarterExchangeApp</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="email">email</string>

    <string name="already_have_an_account_nlogin_now">Already Have an Account?\nLogin Now.</string>
    <string name="need_an_account_nregister_now">Need an account?\nRegister now!</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_likes">Likes</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_a_category">Choose a category</string>


</resources>